fix: replace List.getFirst() with JDK17-safe get(0) in test files
List.getFirst() is a JDK21+ SequencedCollection method introduced by the
timeseries TAG dictionary encoding and vector auto-compaction cherry-picks.
Replace with get(0) for JDK17 compatibility.